# fastapi_finance_app

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yaml  dockermanager.bat  prometheus.yml  pyproject.toml  requirements.txt
app/: main.py
app/admin/: auth.py  views.py
app/auth/: dao.py  dependencies.py  models.py  router.py  schemas.py  service.py  utils.py
app/dao/: base.py
app/data/: .env.dist  config.py
app/data/grafana dashboards/: app dashboard.json  prometheus 2 .0.json  redis cli.json  redis exporter.json  redis overview.json
app/finance/: currencies.json  dao.py  mixins.py  models.py  router.py  schemas.py  service.py
app/tasks/: celery.py
app/utils/: exceptions.py  lifespan_init.py
app/utils/database/: database.py
docker/: app.sh  celery.sh
migrations/: env.py
migrations/versions/: b2ffca121eb9_database_creation.py
