[tool.poetry]
name = "fastapi-finance"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.103.2"}
passlib = "^1.7.4"
python-jose = "^3.3.0"
sqlalchemy = "^2.0.21"
python-multipart = "^0.0.6"
bcrypt = "^4.0.1"
alembic = "^1.12.0"
pydantic-settings = "^2.0.3"
asyncpg = "^0.28.0"
sqladmin = "^0.15.2"
sentry-sdk = {extras = ["fastapi"], version = "^1.32.0"}
celery = "^5.3.4"
flower = "^2.0.1"
pyotp = "^2.9.0"
fastapi-cache2 = "^0.2.1"
redis = "^5.0.1"
gunicorn = "^21.2.0"
python-json-logger = "^2.0.7"
prometheus-fastapi-instrumentator = "^6.1.0"
prometheus-client = "^0.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
